--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,16 +2,19 @@
 <html xmlns="http://www.w3.org/1999/html">
     <head>
         <script data-main="js/main" src="js/bower_components/requirejs/require.js"></script>
-        <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.js"></script>-->
-        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
     <h1 align="center">Contact List</h1>
     <div class="userInfo"></div>
     <div class="addUserHolder">
         <a href="#add" id="add"><input type="button" class="btn btn-primary" value="Add User" /></a>
+        <div class="searchHolder">
+            <input type="text" placeholder="search..." id="search" class="form-control input-sm"/>
+            <input type="button" value="X" id="reset" class="btn btn-success"/>
+        </div>
     </div>
     <div class="userFormHolder"></div>
     <div id="main">
