--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-    <h1 align="center">Contact List</h1>
+    <h1 align="center"><a href="">Contact List</a></h1>
     <div class="userInfo"></div>
     <div class="addUserHolder">
         <a href="#add" id="add"><input type="button" class="btn btn-primary" value="Add User" /></a>
@@ -20,6 +20,7 @@
     <div id="main">
         <center><img src='images/ajax-loader.gif'/></center>
     </div>
+    <div id="paginationHolder"></div>
 
   </body>
 </html>
