Pagination v 0.5: Added contact per page section: rerender page due to dropdown selection.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
             <input type="button" value="X" id="reset" class="btn btn-success"/>
         </div>
     </div>
+    <div id="contactPerPageHolder"></div>
     <div class="userFormHolder"></div>
     <div id="main">
         <center><img src='images/ajax-loader.gif'/></center>
