Refactoring: 1) Added Backbone Validation plugin. 2) Change of spinner invocation and usage (now it is showed on every re-rendering of contact list). 3) Performance upgrades.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h1 align="center"><a href="">Contact List</a></h1>
-    <div class="addUserHolder">
+    <div class="header">
         <a href="#add" id="add"><input type="button" class="btn btn-primary" value="Add User" /></a>
         <div class="searchHolder">
             <input type="text" placeholder="search..." id="search" class="form-control input-sm"/>
